# Stabilizability-Analysis-with-Polytopic-Viability-Kernel

./: CMakeLists.txt  Case4.xml  Case6.xml  Envi.xml  Envi0.xml  Envi1.xml  Envi2.xml  Envi3.xml  Envi4.xml  LICENSE  README.md  Sample.xml
src/: CapturePointAnalysis.cpp  CapturePointSupportPolygon.cpp  CommonHeader.h  ContactInfoLoader.cpp  ConvexPolyhedron.cpp  DataAnalysis.cpp  HJBController.cpp  HJBControllerVelo.cpp  InitialConfigGene.cpp  InitialStateOptimization.cpp  KeyFrameOptimization.cpp  Main.cpp  NonlinearOptimizerInfo.h  PyVisualizer.py  QPStabilizer.cpp  RobotInfo.h  RobotStateFiler.cpp  RobotUtils.cpp  SignedDistanceField.cpp  SimulationTest.cpp  StabilizingControllerContact.cpp  StabilizingControllerGRB.cpp  ViabilityKernelLoader.cpp  XMLFile.py  ZeroStepCapturability.cpp  draw_hull.py  hulltest.py
user/hrp2/: AvgContacts.txt  Axes.txt  Case4.config  Case6.config  Case6.path  Case6_Load.config  Config4XML.config  Cover1.config  Cover2.config  DefaultTest.config  DefaultTester.config  Exp0.config  Exp0_Load.config  Exp1.config  Exp1InitialConfig  Exp2.config  Exp2.path  Exp2_Load.config  Exp3.config  Exp3.path  Exp3_Load.config  Exp3_Load_New.config  Exp4.config  Exp4.path  Exp4_Load.config  Frame0.config  Frame1.config  Frame2.config  Frame2_5.config  Frame2_75.config  Frame3.config  Frame4.config  Frame5.config  FrameOpt.config  InitConfig.config  InitConfigCHEdges.txt  InitConfigIntersections.txt  InitConfigPIPs.txt  InitContact.txt  KeyConfig.config  (+10 more)
